--- a/block-game-clone-backend/Cargo.toml
+++ b/block-game-clone-backend/Cargo.toml
@@ -7,19 +7,11 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib", "rlib"]
 
-[features]
-default = ["console_error_panic_hook"]
-
 [dependencies]
 wasm-bindgen = "0.2.84"
 ts-rs = "6.2"
 
-# The `console_error_panic_hook` crate provides better debugging of panics by
-# logging them with `console.error`. This is great for development, but requires
-# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
-# code size when deploying.
-console_error_panic_hook = { version = "0.1.7", optional = true }
-serde-json-core = "0.5.1"
+serde_json = { version = "*", default-features = false, features = ["alloc"] }
 serde = { version = "*", default-features = false, features = [
     "alloc",
     "derive",
