--- a/block-game-clone-backend/Cargo.toml
+++ b/block-game-clone-backend/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-wasm-bindgen = "0.2.84"
 ts-rs = "6.2"
+wasm-bindgen = { version = "0.2.84", optional = true }
 
 serde_json = { version = "*", default-features = false, features = ["alloc"] }
 serde = { version = "*", default-features = false, features = [
@@ -25,6 +25,9 @@ itertools = "0.11.0"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
+
+[features]
+avif = ["dep:wasm-bindgen"]
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
