--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["block-game-clone-backend"]
+members = ["block-game-clone-backend", "build_automation"]
 default-members = ["block-game-clone-backend"]
